src/kudu/tablet/transactions/write_transaction.h
@@ -84,11 +84,13 @@ class WriteTransactionState : public TransactionState {
   }
 
   // Set the MVCC transaction associated with this Write operation.
-  // This must be called exactly once, during the PREPARE phase.
+  // This must be called exactly once, during the PREPARE phase just
+  // after the MvccManager has assigned a timestamp.
   void set_mvcc_tx(gscoped_ptr<ScopedTransaction> mvcc_tx);
 
   // Set the Tablet components that this transaction will write into.
-  // Called exactly once during PREPARE
+  // Called exactly once at the beginning of Apply, before applying its
+  // in-memory edits.
   void set_tablet_components(const scoped_refptr<const TabletComponents>& components);
 
   // Take a shared lock on the given schema lock.
